tests/negative/typecheck/product_len.orng
// product_len.orng:6:33: error: tuple takes 3 elements, 2 elements given
//     let x: (Int, Int, Int) = (3, '3')
//                                ^
// 
fn main() -> Int {
    let x: (Int, Int, Int) = (3, '3')
    x[0]
}